<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relative_layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="20dp" >

            <ImageView
                android:id="@+id/fragment_main_screen_logo_imageview"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingRight="10dp"
                android:src="@drawable/mep_logo" />

            <TextView
                android:id="@+id/fragment_main_screen_logo_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/fragment_main_screen_logo_imageview"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:layout_centerVertical="true"
                android:text="@string/company_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>

       

        <TextView
            android:id="@+id/contact_mail_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_address_textview"
            android:paddingBottom="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/contact_mail"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/contact_address_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/contact_mail_textview"
            android:layout_below="@+id/contact_phone_textview"
            android:paddingBottom="10dp"
            android:text="@string/contact_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/contact_phone_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/contact_mail_textview"
            android:layout_below="@+id/relative_layout1"
            android:paddingBottom="10dp"
            android:text="@string/contact_phone_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/contact_mail_opening_hours_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/contact_mail_textview"
            android:layout_below="@+id/contact_mail_textview"
            android:paddingBottom="10dp"
            android:text="@string/contact_opening_hours"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
         <ImageView
            android:id="@+id/contact_map_imageview"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@+id/contact_mail_opening_hours_textview"
            android:paddingBottom="10dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/mep_map" />
    </RelativeLayout>

</ScrollView>